add js lib in index.xhtml

--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -21,7 +21,8 @@
 
   <!-- custom style sheets and scripts -->
   <h:outputStylesheet name="css/jk.css" />
-  <h:outputScript name="js/TableList.js" />
+  <h:outputScript name="js/TablesList.js" />
+  <h:outputScript name="js/TableObject.js" />
   <h:outputScript name="js/Relationship.js" />
   <h:outputScript name="js/FakeTable.js" />
   <h:outputScript name="js/MinTable.js" />
