update ERD mode

--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -284,6 +284,16 @@
 			</div>
 		</div>
 	</div>
-	<div id="ERDMode"></div>
+	<div class="container-fluid" id="ERDMode">
+		<div class="row">
+			<div class="col-lg-9">
+				<div id="ERD"></div>
+			</div>
+			<div class="col-lg-3">
+				<div id="option-panel"></div>
+			</div>
+		</div>
+	</div>
+	
 </h:body>
 </html>
