--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -42,9 +42,7 @@
     <div class="headerbar-container">
       <!-- left side menu -->
       <ul class="nav navbar-nav">
-      	<li><label id="switch-mode-icon" onclick="tranferMode()">
-			  	<span class="glyphicon glyphicon-transfer"></span>
-			  </label></li>
+      	
         <li><label id="upload-trigger"><span class="glyphicon glyphicon-upload"></span> Upload</label></li>
         <li><h:form id="dl-form">
         		<h:panelGroup styleClass="rawdata-op-area">
@@ -59,6 +57,9 @@
       <!-- right side menu -->
       <ul class="nav navbar-nav navbar-right">
         <li id="present-mode">Table Mode</li>
+        <li><label id="switch-mode-icon" onclick="tranferMode()">
+			  	<span class="glyphicon glyphicon-transfer"></span>
+			  </label></li>
       </ul>
     </div>
   </nav>
@@ -127,11 +128,11 @@
                 <div class="row form-group">
                   <label>Data Type: </label>
                   <select id="col-type-detail" class="col-type-detail form-control input-form">
-                  <option value="VARCHAR">VARCHAR()</option>
-                  <option value="INTEGER">INTEGER</option>
-	              <option value="DOUBLE">DOUBLE</option>
-	              <option value="DATE">DATE</option>
-	              <option value="FLOAT">FLOAT</option>
+	                  <option value="VARCHAR">VARCHAR()</option>
+	                  <option value="INTEGER">INTEGER</option>
+		              	<option value="DOUBLE">DOUBLE</option>
+		              	<option value="DATE">DATE</option>
+		              	<option value="FLOAT">FLOAT</option>
                   </select>
                 </div>
                 <div class="row form-group">
@@ -325,13 +326,14 @@
 					<br/>
 					<p>2. Fill all information below:</p>
 					<form class="form-inline">
-						<p id="validate-notice-col"></p>
-          	<div style="padding-left:15px;margin-bottom: 15px;margin-top:5px;">
+						
+          	<div style="padding-left:15px;margin-bottom: 15px;margin-top:5px;">	
+          		<p id="validate-name-notice"></p>
             	<label style="width: 80px">Name: </label>
             	<input id="name-new-col" type="text" style="width: 80%" class="form-control input-form" onchange="validateName()"/>
             	<br/>
             </div>
-            <div style="padding-left:15px;margin-bottom: 15px;">
+            <div id="datatype-nc-container" style="padding-left:15px;margin-bottom: 15px;">
             	<label style="width: 80px">Data Type: </label>
             	<select id="datatype-new-col" style="width: 30%" class="form-control input-form">
               	<option value="VARCHAR">VARCHAR()</option>
@@ -342,10 +344,10 @@
               </select>
             	<br/>
             </div>
-            <div style="padding-left:15px;margin-bottom: 15px;">
+            <div id="length-nc-container" style="padding-left:15px;margin-bottom: 15px;">
+            	<p id="validate-length-notice"></p>
             	<label style="width: 80px">Length: </label>
-              <input id="length-new-col" style="width: 80%" type="text" class="form-control input-form" />
-            	<br/>
+              <input id="length-new-col" style="width: 80%" type="text" class="form-control input-form" onchange="validateLength()"/>
             </div>
             <div id="rftable-nc-container" style="padding-left:15px;margin-bottom: 15px;">
             	<label style="width: 145px">Reference Table: </label>
