--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -388,9 +388,25 @@
 								</select>
 							</div>
 						</div>
-						<div class="row">
+						<div id="form-new-property" style="display: none">
+						<div  class="form-group" style="width:100%">
+							<label class="control-label col-sm-4" for="new-property">New PPT:</label>
+							<div class="col-sm-8">
+								<input type="text" class="form-control" id="new-property" style="width:95%" placeholder="Enter new property"/>
+							</div>
+						</div>
+						<div class="row" style="width:100%">
 						<div class="col-sm-4"></div>
 						<div class="col-sm-8">
+							<button id="btn-ok-pro" type="button" class="btn btn-sm btn-success"><span class="glyphicon glyphicon-ok-sign"></span> OK</button>
+							<button id="btn-cancel-pro" type="button" class="btn btn-sm btn-danger" ><span class="glyphicon glyphicon-remove-sign"></span> Cancel</button>
+						</div>
+						</div>
+						</div>
+						
+						<div class="row" style="width:100%">
+						<div class="col-sm-4"></div>
+						<div class="col-sm-8" id="form-btn-default">
 							<button id="btn-add-pro" type="button" class="btn btn-sm btn-success"  disabled="disabled"><span class="glyphicon glyphicon-plus"></span> Add</button>
 							<button id="btn-delete-pro" type="button" class="btn btn-sm btn-danger"  disabled="disabled"><span class="glyphicon glyphicon-trash"></span> Delete</button>
 						</div>
@@ -399,6 +415,7 @@
 						<div class="heading">
 								<h3 style="border-top: 2px solid #03a9f4; margin:10px">Relation</h3>
 						</div>
+						<div id="default-fk">
 						<div class="form-group" style="width:100%">
 							<label class="control-label col-sm-4" for="fk-table-erd-current">Entity 1:</label>
 							<div class="col-sm-8">
@@ -411,11 +428,34 @@
 								<input type="text" class="form-control" id="fk-refertable-erd-current" style="width:95%" disabled="disabled"/>
 							</div>
 						</div>
-						<div class="row">
+						<div class="row" style="width:100%">
 						<div class="col-sm-4"></div>
 						<div class="col-sm-8">
 							<button id="btn-add-rela" type="button" class="btn btn-sm btn-success" disabled="disabled"><span class="glyphicon glyphicon-plus"></span> Add</button>
 							<button id="btn-delete-rela" type="button" class="btn btn-sm btn-danger" disabled="disabled"><span class="glyphicon glyphicon-trash"></span> Delete</button>
+						</div>
+						</div>
+						</div>
+						
+						<div id="new-fk" style="display:none">
+						<div class="form-group" style="width:100%">
+							<label class="control-label col-sm-4" for="fk-table-erd-new">Entity 1:</label>
+							<div class="col-sm-8">
+								<select class="form-control" id="fk-table-erd-new" style="width:95%"></select>
+							</div>
+						</div>
+						<div class="form-group" style="width:100%">
+							<label class="control-label col-sm-4" for="fk-refertable-erd-new"> Entity 2:</label>
+							<div class="col-sm-8">
+								<select class="form-control" id="fk-refertable-erd-new" style="width:95%"></select>
+							</div>
+						</div>
+						<div class="row" style="width:100%">
+						<div class="col-sm-4"></div>
+						<div class="col-sm-8">
+							<button id="btn-ok-rela" type="button" class="btn btn-sm btn-success" ><span class="glyphicon glyphicon-ok-sign"></span> OK</button>
+							<button id="btn-cancel-rela" type="button" class="btn btn-sm btn-danger"><span class="glyphicon glyphicon-remove-sign"></span> Cancel</button>
+						</div>
 						</div>
 						</div>
 					</form>
