fix select option of table in relation tab

--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -80,8 +80,8 @@
       <div class="hcia-contentpanel">
         <!-- tab titles -->
         <ul class="nav nav-tabs">
-          <li class="active"><a data-toggle="tab" href="#columntab">Columns</a></li>
-          <li><a data-toggle="tab" href="#foreignkeytab">Foreign Keys</a></li>
+          <li id="col-tab" class="active"><a data-toggle="tab" href="#columntab">Columns</a></li>
+          <li id="fk-tab"><a data-toggle="tab" href="#foreignkeytab">Foreign Keys</a></li>
         </ul>
 
         <!-- column tab -->
