--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -106,6 +106,11 @@
       </ul>
       </div>
   </nav>
+  <div>
+  	<span class="toggle-nav glyphicon glyphicon-cog"></span>
+  	<span class="transfer-nav glyphicon glyphicon-transfer" onclick="tranferMode()"
+  					data-toggle="tooltip" title="To Table Mode"></span>
+  </div>
 
   <div class="container-fluid hcia-container" id="tableMode">
     <!-- tree of tables -->
@@ -255,7 +260,7 @@
           <!-- command button -->
           <div class="hcia-tblaction">
             <button class="btn btn-danger hcia-btnright" onclick="InfoPanel.displayCurrentTable()">Cancel</button>
-            <button id="btn-save" class="btn btn-info hcia-btnright" onclick="TableAction.save()">Save</button>
+            <button id="btn-save" class="btn btn-info hcia-btnright" onclick="TableAction.save()">Update</button>
           </div>
 
         </div><!-- tab content -->
