update new ERD model

--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -32,7 +32,12 @@
   <h:outputScript name="js/InfoPanel.js" />
   <h:outputScript name="js/TableAction.js" />
   <h:outputScript name="js/main.js" />
-  <h:outputScript name="js/d3.js" />
+  <h:outputScript name="js/d3new.js" />
+  <h:outputScript name="js/Columnd3.js" />
+  <h:outputScript name="js/Tabled3.js" />
+  <h:outputScript name="js/Relationshipd3.js" />
+  
+  
   
 </h:head>
 	<f:event listener="#{userBean.loadExistUser}" type="preRenderView" />
