add comment and description for js object and function

--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -23,11 +23,12 @@
   <!-- custom style sheets and scripts -->
   <h:outputStylesheet name="css/jk.css" />
   <h:outputStylesheet name="css/line.css" />
-  <h:outputScript name="js/TablesList.js" />
-  <h:outputScript name="js/TableObject.js" />
+  <h:outputScript name="js/Table.js" />
   <h:outputScript name="js/Relationship.js" />
-  <h:outputScript name="js/FakeTable.js" />
+  <h:outputScript name="js/TablesList.js" />
   <h:outputScript name="js/MinTable.js" />
+  <h:outputScript name="js/MinColumn.js" />
+  <h:outputScript name="js/FakeTable.js" />
   <h:outputScript name="js/TreeView.js" />
   <h:outputScript name="js/InfoPanel.js" />
   <h:outputScript name="js/TableAction.js" />
